feat: insert job results on db
