# back/common/domain/job_task_type.go
@@ -3,14 +3,14 @@ package domain
 type JobTaskType string
 
 const (
-	JobTaskType_Unknown                     JobTaskType = ""
-	JobTaskType_Weather                     JobTaskType = "get_weather"
-	JobTaskType_GetChabanDelmasBridgeStatus JobTaskType = "get_chaban_delmas_bridge_status"
+	JobTaskType_Unknown                       JobTaskType = ""
+	JobTaskType_Weather                       JobTaskType = "get_weather"
+	JobTaskType_GetChabanDelmasBridgeSchedule JobTaskType = "get_chaban_delmas_bridge_schedule"
 )
 
 func (j JobTaskType) IsValid() bool {
 	switch j {
-	case JobTaskType_Weather, JobTaskType_GetChabanDelmasBridgeStatus:
+	case JobTaskType_Weather, JobTaskType_GetChabanDelmasBridgeSchedule:
 		return true
 	}
 	return false
