# back/jobservice/docs/swagger.json
@@ -297,11 +297,11 @@
                 "failed"
             ],
             "x-enum-varnames": [
-                "JobStatus_Unknown",
-                "JobStatus_Pending",
-                "JobStatus_InProgress",
-                "JobStatus_Completed",
-                "JobStatus_Failed"
+                "Status_Unknown",
+                "Status_Pending",
+                "Status_InProgress",
+                "Status_Completed",
+                "Status_Failed"
             ]
         },
         "dtos.TaskType": {
@@ -309,12 +309,12 @@
             "enum": [
                 "",
                 "get_weather",
-                "get_chaban_delmas_bridge_status"
+                "get_chaban_delmas_bridge_schedule"
             ],
             "x-enum-varnames": [
-                "JobTaskType_Unknown",
-                "JobTaskType_Weather",
-                "JobTaskType_GetChabanDelmasBridgeStatus"
+                "TaskType_Unknown",
+                "TaskType_Weather",
+                "TaskType_GetChabanDelmasBridgeSchedule"
             ]
         },
         "dtos.UpdateJobRequest": {
@@ -326,7 +326,6 @@
             ],
             "properties": {
                 "name": {
-                    "description": "in: body",
                     "type": "string",
                     "maxLength": 255
                 },
