# back/jobservice/infrastructure/grpc_server/grpc.go
@@ -4,6 +4,7 @@ import (
 	"context"
 	"errors"
 	"fmt"
+	domain2 "github.com/BenjaminB64/fullstack-test/back/common/domain"
 	"github.com/BenjaminB64/fullstack-test/back/common/domainProtoConverters"
 	jobsproto "github.com/BenjaminB64/fullstack-test/back/common/protobuf/jobs-proto"
 	"github.com/BenjaminB64/fullstack-test/back/jobservice/domain"
@@ -73,17 +74,42 @@ func (s *GrpcServer) GetPendingJobs(ctx context.Context, request *jobsproto.GetP
 	return res, nil
 }
 
-func (s *GrpcServer) UpdateJobStatus(ctx context.Context, request *jobsproto.UpdateJobStatusRequest) (*jobsproto.UpdateJobStatusResponse, error) {
-	job, err := s.jobService.ReadJob(ctx, int(request.Job.Id))
+func (s *GrpcServer) UpdateJob(ctx context.Context, request *jobsproto.UpdateJobRequest) (*jobsproto.UpdateJobResponse, error) {
+	job, err := s.jobService.ReadJob(ctx, int(request.Id))
 	if err != nil {
 		return nil, err
 	}
 
-	job.Status = domainProtoConverters.GrpcStatusToDomainStatus(request.Job.Status)
+	job.Status = domainProtoConverters.GrpcStatusToDomainStatus(request.Status)
+
+	if job.TaskType == domain2.JobTaskType_GetChabanDelmasBridgeSchedule {
+		if bridgeSchedule, ok := request.Result.ResultOneof.(*jobsproto.JobResult_BridgeSchedule); ok {
+			bridgeResult := domainProtoConverters.GrpcBridgeScheduleToBridgeJobResult(bridgeSchedule.BridgeSchedule)
+			err = s.jobService.CreateBridgeJobResult(ctx, job.ID, bridgeResult)
+			if err != nil {
+				return nil, err
+			}
+		} else {
+			return nil, errors.New("job type is GetChabanDelmasBridgeSchedule but result is not BridgeSchedule")
+		}
+	}
+
+	if job.TaskType == domain2.JobTaskType_Weather {
+		if weather, ok := request.Result.ResultOneof.(*jobsproto.JobResult_Weather); ok {
+			weatherResult := domainProtoConverters.GrpcWeatherToWeatherJobResult(weather.Weather)
+			err = s.jobService.CreateWeatherJobResult(ctx, job.ID, weatherResult)
+			if err != nil {
+				return nil, err
+			}
+		} else {
+			return nil, errors.New("job type is Weather but result is not Weather")
+		}
+	}
+
 	_, err = s.jobService.UpdateJob(ctx, job)
 	if err != nil {
 		return nil, err
 	}
 
-	return &jobsproto.UpdateJobStatusResponse{}, nil
+	return &jobsproto.UpdateJobResponse{}, nil
 }
